--- a/src/components/app-root/app-root.css
+++ b/src/components/app-root/app-root.css
@@ -36,15 +36,6 @@ stencil-site {
   }
 }
 
-.ui-container {
-  width: 100%;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0 64px;
-  flex: 1 0 auto;
-}
-
 main {
   display: flex;
   flex-direction: column;
